--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>Quiz App</title>
 </head>
 <body>
+
     <div class="container" id="quizData">
+
+        <div class="progress-bar">
+            <div class="progress"></div>
+        </div>
+
         <div class="quiz-header">
         <h2 id="question">Questions</h2>
             <ul>
