--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Quiz App</title>
 </head>
 <body>
@@ -38,6 +39,13 @@
         <button id="submitBtn">Submit</button>
     </div>
 
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <p id="modal-text"><i class="fas fa-check"></i></p>
+        </div>
+    </div>
+    
     <script src="assets/script.js"></script>
 </body>
 </html>
